--- a/code/sass/ScheduleEntry.scss
+++ b/code/sass/ScheduleEntry.scss
@@ -101,7 +101,7 @@ $indent:       24px;
   ._field_name._zombie ._content {
     color: #cc66cc !important;
   }
- ._field_zombieActive ._content {
+  ._field_zombieActive ._content {
     color: #e68ae6 !important;
     font-style: italic;;
   }
@@ -209,7 +209,7 @@ $indent:       24px;
       > ._field:not(._field_name) {
         margin-top: 2px;
       }
-     > div > div > ._content {
+      > div > div > ._content {
         color: black;
         font-weight: 100;
         font-size: $h3Font;
@@ -230,7 +230,7 @@ $indent:       24px;
               color: #aaa;
               font-style: italic;
             }
-    }}}}
+          }}}}
     ._list_line_scheduleLine * {
       color: #444;
       font-weight: 100;
@@ -250,11 +250,157 @@ $indent:       24px;
   }
 }
 
+@mixin noroot-schedule-entry ($width-narrow, $width-wide, $h1Font, $h2Font, $h3Font, $bFont) {
+  @include schedule-entry-base();
+  z-index: 1000;
+  @include adaptive-width($width-narrow, $width-wide);
+  ._field_name._zombie ._content {
+    color: #cc66cc !important;
+  }
+  ._field_zombieActive ._content {
+    color: #e68ae6 !important;
+    font-style: italic;;
+  }
+  > ul * {
+    font-size: $bFont;
+    ._content {
+      white-space: nowrap;
+    }
+  }
+  > ul {
+    margin: 0px;
+  }
+    > ul > li {
+      > ._field_name ._content {
+        @include adaptive-width($name-narrow - $indent * 0, $name-wide - $indent * 0);
+        font-size: 10px;
+        visibility: hidden;
+      }
+      ._field_name._account ._content {
+        color: #3d993d
+      }
+      > ._field_name._account ._content {
+        color: #4d994d;
+      }
+      > ul > li {
+        margin-left: $indent * 0;
+        > ._field_name ._content {
+          @include adaptive-width($name-narrow - $indent * 0, $name-wide - $indent * 0);
+        }
+        > ul > li {
+          margin-left: $indent * 1;
+          > ._field_name ._content {
+            @include adaptive-width($name-narrow - $indent * 1, $name-wide - $indent * 1);
+          }
+          > ul > li {
+            margin-left: $indent * 1;
+            > ._field_name ._content {
+              @include adaptive-width($name-narrow - $indent * 2, $name-wide - $indent * 2);
+            }
+            > ul > li {
+              margin-left: $indent * 1;
+              > ._field_name ._content {
+                @include adaptive-width($name-narrow - $indent * 3, $name-wide - $indent * 3);
+              }
+              > ul > li {
+                margin-left: $indent * 1;
+                > ._field_name ._content {
+                  @include adaptive-width($name-narrow - $indent * 4, $name-wide - $indent * 4);
+                }
+                > ul > li {
+                  margin-left: $indent * 1;
+                  > ._field_name ._content {
+                    @include adaptive-width($name-narrow - $indent * 5, $name-wide - $indent * 5);
+                  }
+                  > ul > li {
+                    margin-left: $indent * 1;
+                    > ._field_name ._content {
+                      @include adaptive-width($name-narrow - $indent * 6, $name-wide - $indent * 6);
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+  }
+  > ul > li,
+  > ul > div > li {
+    > ._field_scheduleLine {
+      padding-bottom: 2px;
+    }
+    > ._field_name {
+      * {
+        font-size: $h2Font;
+      }
+    }
+    > div > div > ._content {
+      color: black;
+      font-weight: 200;
+    }
+    > ul > li {
+      > ._field:not(._field_name) {
+        margin-top: 2px;
+      }
+      > div > div > ._content {
+        color: black;
+        font-weight: 100;
+        font-size: $h3Font;
+      }
+      > ul > li {
+        > div > div > ._content {
+          color: #666;
+          font-weight: 100;
+        }
+        > ul > li {
+          > div > div > ._content {
+            font-weight: 100;
+            color: #888;
+          }
+          > ul > li {
+            > div > div > ._content {
+              font-weight: 100;
+              color: #aaa;
+              font-style: italic;
+            }
+          }}}}
+    ._list_line_scheduleLine * {
+      color: #444;
+      font-weight: 100;
+    }
+  }
+  > ul li > ul > li._placeholder {
+    margin-top: -1px;
+  }
+  > ul li > ul > li._placeholder:first-child:not(:last-child),
+  > ul li > ul > li.ui-sortable-helper:first-child + li._placeholder:not(:last-child) {
+    margin-bottom: -1px;
+  }
+  > ul > li > ul li._list_line_categoryLine,
+  > ul > div > li > ul li._list_line_categoryLine {
+    border-top: 1px dotted #d8d8d8;
+  }
+}
+
 ._ScheduleEntry {
   @include schedule-entry (976px, 1138px, 30px, 24px, 15px, 13px);
   position: relative;
   ._field_scheduleLine {
      @include adaptive-width(465px, 590px);
+  }
+}
+
+._ExtendedMiniScheduleEntry {
+  @include noroot-schedule-entry (976px, 1138px, 30px, 24px, 15px, 13px);
+  position: relative;
+  background: #ffffff;
+  border-right: 8px solid transparent;
+  border-radius: 6px;
+  padding: 2px 8px;
+  margin-top: 20px;
+  ._field_scheduleLine {
+    @include adaptive-width(465px, 590px);
   }
 }
 
