--- a/code/sass/lib.scss
+++ b/code/sass/lib.scss
@@ -138,9 +138,6 @@ table > tbody > tr > td > ._field > div > ._content {
 ._sidebar_group {
   overflow: hidden;
   margin: 16px 11px 16px 11px;
-  &:nth-child(2) {
-    margin-top: 25px;
-  }
   background-color: rgba(248, 248, 248, 0.8);
   border-radius: 12px;
   box-shadow: 0px 0px 1px rgba(0,0,0,.3), 0px 0px 3px rgba(0,0,0,.15);
@@ -179,6 +176,7 @@ table > tbody > tr > td > ._field > div > ._content {
 }
 
 ._sidebar_right {
+  padding-top: 6px;
   overflow-x: visible;
   overflow-y: scroll;
   &::-webkit-scrollbar { width: 0 !important };
@@ -197,6 +195,7 @@ table > tbody > tr > td > ._field > div > ._content {
     border:none;
     position: absolute;
     right:   4px;
+    top:     -2px;
     background-color:rgba(0,0,0,0);
     white-space:nowrap;
     font-size: 18px;
