--- a/code/sass/ScheduleEntry.scss
+++ b/code/sass/ScheduleEntry.scss
@@ -4,7 +4,7 @@ $name-narrow: 250px;
 $name-wide:   300px;
 $indent:       24px;
 
-@mixin schedule-entry-base() {
+@mixin schedule-entry-base($threshold:$defaultThreshold) {
   ul {padding-left: 0px;}
   li {
     white-space: nowrap;
@@ -25,7 +25,7 @@ $indent:       24px;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
-        @include adaptive-width($name-narrow,$name-wide);
+        @include adaptive-width($name-narrow,$name-wide,$threshold);
       }
     }
     ._field_start ._content, ._field_end ._content {width: 4em}
@@ -68,10 +68,10 @@ $indent:       24px;
         font-style: italic;
       }
       &:not(._narrow) ._content {
-        @include adaptive-width(200px,325px);
+        @include adaptive-width(200px,325px,$threshold);
       }
       &._narrow ._content {
-        @include adaptive-width(85px,200px);
+        @include adaptive-width(85px,200px,$threshold);
       }
     }
     div._field_total {
@@ -250,10 +250,10 @@ $indent:       24px;
   }
 }
 
-@mixin noroot-schedule-entry ($width-narrow, $width-wide, $h1Font, $h2Font, $h3Font, $bFont) {
-  @include schedule-entry-base();
+@mixin noroot-schedule-entry ($width-narrow, $width-wide, $h1Font, $h2Font, $h3Font, $bFont, $threshold: $defaultThreshold) {
+  @include schedule-entry-base($threshold);
   z-index: 1000;
-  @include adaptive-width($width-narrow, $width-wide);
+  @include adaptive-width($width-narrow, $width-wide, $threshold);
   ._field_name._zombie ._content {
     color: #cc66cc !important;
   }
@@ -271,10 +271,16 @@ $indent:       24px;
     margin: 0px;
   }
     > ul > li {
+      > ._field_name {
+        margin-top: -4px;
+        max-height: 24px;
+      }
       > ._field_name ._content {
-        @include adaptive-width($name-narrow - $indent * 0, $name-wide - $indent * 0);
-        font-size: 10px;
-        visibility: hidden;
+        @include adaptive-width($name-narrow - $indent * 0, $name-wide - $indent * 0, $threshold);
+        font-size: 15px;
+        font-weight: 500;
+        color: #0081cc;
+        &::before {content: 'All '}
       }
       ._field_name._account ._content {
         color: #3d993d
@@ -285,37 +291,37 @@ $indent:       24px;
       > ul > li {
         margin-left: $indent * 0;
         > ._field_name ._content {
-          @include adaptive-width($name-narrow - $indent * 0, $name-wide - $indent * 0);
+          @include adaptive-width($name-narrow - $indent * 0, $name-wide - $indent * 0, $threshold);
         }
         > ul > li {
           margin-left: $indent * 1;
           > ._field_name ._content {
-            @include adaptive-width($name-narrow - $indent * 1, $name-wide - $indent * 1);
+            @include adaptive-width($name-narrow - $indent * 1, $name-wide - $indent * 1, $threshold);
           }
           > ul > li {
             margin-left: $indent * 1;
             > ._field_name ._content {
-              @include adaptive-width($name-narrow - $indent * 2, $name-wide - $indent * 2);
+              @include adaptive-width($name-narrow - $indent * 2, $name-wide - $indent * 2, $threshold);
             }
             > ul > li {
               margin-left: $indent * 1;
               > ._field_name ._content {
-                @include adaptive-width($name-narrow - $indent * 3, $name-wide - $indent * 3);
+                @include adaptive-width($name-narrow - $indent * 3, $name-wide - $indent * 3, $threshold);
               }
               > ul > li {
                 margin-left: $indent * 1;
                 > ._field_name ._content {
-                  @include adaptive-width($name-narrow - $indent * 4, $name-wide - $indent * 4);
+                  @include adaptive-width($name-narrow - $indent * 4, $name-wide - $indent * 4, $threshold);
                 }
                 > ul > li {
                   margin-left: $indent * 1;
                   > ._field_name ._content {
-                    @include adaptive-width($name-narrow - $indent * 5, $name-wide - $indent * 5);
+                    @include adaptive-width($name-narrow - $indent * 5, $name-wide - $indent * 5, $threshold);
                   }
                   > ul > li {
                     margin-left: $indent * 1;
                     > ._field_name ._content {
-                      @include adaptive-width($name-narrow - $indent * 6, $name-wide - $indent * 6);
+                      @include adaptive-width($name-narrow - $indent * 6, $name-wide - $indent * 6, $threshold);
                     }
                   }
                 }
@@ -392,7 +398,8 @@ $indent:       24px;
 }
 
 ._ExtendedMiniScheduleEntry {
-  @include noroot-schedule-entry (976px, 1138px, 30px, 24px, 15px, 13px);
+  $threshold: $extendedMiniScheduleThreshold;
+  @include noroot-schedule-entry (976px, 1138px, 30px, 24px, 15px, 13px, $threshold);
   position: relative;
   background: #ffffff;
   border-right: 8px solid transparent;
@@ -400,7 +407,7 @@ $indent:       24px;
   padding: 2px 8px;
   margin-top: 20px;
   ._field_scheduleLine {
-    @include adaptive-width(465px, 590px);
+    @include adaptive-width(465px, 590px, $threshold);
   }
 }
 
