--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -208,31 +208,24 @@ body {
         margin-top: -8px;
         display: flex;
         flex-direction: row;
-        > ._icons {
-          width: 28px;
-          display: flex;
-          flex-direction: column;
-        }
         > ._title {
-          flex-grow: 1;
           margin-left: 12px;
-          > ._field_name > div > ._content {
-            font-size: 64px;
-            color: #33b1ff;
-            font-weight: 200;
-            &:not(:focus) {border: 2px solid transparent!important}
-            background-color: transparent;
-            height: auto;
-            margin-bottom: 8px;
-            width: 600px;
-          }
+          flex: 1;
+          font-size: 64px;
+          color: #33b1ff;
+          font-weight: 200;
         }
         > ._budgetTotal {
           font-size: 64px;
           color: #33b1ff;
           font-weight: 200;
-          padding-right: 4px;
         }
+        > ._icons {
+          width: 28px;
+          display: flex;
+          flex-direction: column;
+        }
+
       }
       > ._topCaption {
         display: flex;
@@ -242,18 +235,25 @@ body {
           color: #33b1ff;
           font-weight: 200;
           font-size: 20px;
-          margin-right: 36px;
-          margin-top: -24px;
+          margin-right: 32px;
+          margin-top: -6px;
         }
+      }
+      > ._monthlyGraphLine {
+        margin-top: -70px;
+        display: flex;
+        justify-content: center;
       }
       > ._graphs {
         margin: 32px;
+        margin-top: 12px;
         display: flex;
         flex-direction: row;
         > ._progress {
-          margin-top: -32px;
+          margin-right: 16px;
+          margin-top: -24px;
           flex: 1;
-          @include adaptive-width(986px - 250px, 1138px - 250px);
+          @include adaptive-width(986px - 250px, 1138px - 250px, $extendedMiniScheduleThreshold);
           > ._graph_title {
             color: #777;
             font-size: 32px;
@@ -266,6 +266,7 @@ body {
         > ._budget {
           flex: 0;
           width: 200px;
+          margin-top: -16px;
         }
       }
     }
