--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -1,6 +1,6 @@
 @import 'lib';
 
-body {
+html {
   font-family: -apple-system, Helvetica, Arial, "Lucida Grande", sans-serif;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   -webkit-font-smoothing: antialiased;
@@ -253,7 +253,7 @@ body {
           margin-right: 16px;
           margin-top: -24px;
           flex: 1;
-          @include adaptive-width(986px - 250px, 1138px - 250px, $extendedMiniScheduleThreshold);
+          @include adaptive-width(986px - 250px, 1138px - 250px, $expandedMiniScheduleThreshold);
           > ._graph_title {
             color: #777;
             font-size: 32px;
