--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -1063,7 +1063,7 @@ body > ._pleaseWait {
 }
 
 body > ._landing {
-  //position: fixed;
+  //: fixed;
   max-width: 1100px;
   margin-left: auto;
   margin-right: auto;
@@ -1123,6 +1123,7 @@ body > ._landing {
     > ul {
       list-style-type: none;
       > li {
+        white-space: nowrap;
         &:before {
           content: "\2713";
           margin-right: 16px;
