Make unallocated field invisible if its blank so that clicks go through to notes field; and a style tweak.

--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -13,7 +13,10 @@ html {
   display: none;
 }
 .negative {
-  color: #922!important
+  color: #991f1f !important
+}
+.coolNegative {
+  color: #b36b6b!important;
 }
 
 .noUi-connect {
