Style tweak to Extended HUD.

--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -288,6 +288,7 @@ html {
           flex: 0;
           width: 200px;
           margin-top: -80px;
+          margin-bottom: -20px;
         }
       }
       > ._schedule > ._path {
