Resolve issue with profile edit where new config would display before its budgets resulting in undesirable ui effect.

--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -493,6 +493,9 @@ div._systemStatus {
           color: #33b1ff;
           padding-bottom: 8px;
         }
+        ._heading:not(:first-child) {
+          font-size:24px;
+        }
         > ._contentGroup {
           background: #fafafa;
           padding: 12px;
