--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -1233,6 +1233,7 @@ body > ._landing {
       border-radius: 4px;
       padding: 3px;
       color: #444;
+      font-size: 13px;
       &._disabled {color: #ddd}
       &._endPoint {background: #33b1ff; color: white}
       &._included {background: #d1f0ff}
