--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -462,8 +462,9 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
 
   /* Freeze first column on scroll */
   div._budgetHistoryTable:not(._popup) > div, div._netWorthTableContainer:not(._popup) {
-    margin-left: calc((100vw - 1400px - 80px) / 2)!important;
-    width: 1400px!important;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1350px!important;
     overflow-x: scroll;
     > table > * > tr > td:first-child,  > table > * > tr > th:first-child {
       position:absolute;
