--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -340,6 +340,18 @@ html {
     left: 8px;
     bottom: 24px;
   }
+  &._twoTableTip {
+    > table {
+      border-collapse: collapse;
+      > tbody > tr {
+        > td:first-child {text-align: left}
+        > td:last-child  {
+          padding-left: 8px;
+          text-align: right
+        }
+      }
+    }
+  }
 }
 
 
