Refactor ScheduleEntry to use repeatEnd rather than limit.

--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -1209,7 +1209,7 @@ body > ._landing {
   }
 }
 
-._limitPicker {
+._repeatEndPicker {
   position: absolute;
   z-index: 1000;
   padding-bottom: 8px;
