--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -1110,11 +1110,19 @@ body > ._landing {
         margin-bottom: 4px;
         font-weight: 300;
       }
+      > div:last-child {
+        margin-top: 32px;
+        font-style: italic;
+        font-size: 24px;
+        color: #1fb0ff;
+        font-weight: 500;
+      }
     }
     > div:nth-child(2) {
       box-shadow: $drop-shadow;
       > img {width: 500px}
     }
+
   }
   > ._landingBullets {
     margin-top: 20px;
