Normalize picker style for recategorize vs tranasction edit (color of unselected interior node was different for each).

--- a/code/sass/TransactionTable.scss
+++ b/code/sass/TransactionTable.scss
@@ -519,7 +519,7 @@ div._TransactionHUD {
         color: #33b1ff;
       }
      }
-    > ._recategorizeDialogue > div > div, ._recategorizeDialogue > div > ._changeAllButton {
+    > ._recategorizeDialogue > div > div:first-child, ._recategorizeDialogue > div > ._changeAllButton {
       color: #33b1ff;
       &._disabled {
         color: grey;
