--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -1309,6 +1309,7 @@ body > ._landing {
         margin-top: 4px;
         border-top: 1px solid #ccc;
         > table > tbody > tr > td {
+          font-size: 13px;
           padding: 3px;
           > div {
             color: #888;
